# armasai

./: .gitignore  PRD.md  README.md  WORK_SPLIT.md  package-lock.json  plan.md  pyproject.toml  tasks.py
.agents/handoffs/: morphology-phase1.md
.claude/commands/: pitch-deck.md
adl/: README.md
assets/mjcf/: iter0_c0.xml  iter1_c0.xml  iter2_c0.xml  iter3_c0.xml  iter4_c0.xml  smoke_test.xml
datasets/: adl_labels.json
docs/: BENJI_TASKS_GUIDE.md  PRD.md  WORK_SPLIT.md
docs/pitch/: CONTEXT.md
prosthesis_rl/: __init__.py  app_bridge.py
prosthesis_rl/agents/: __init__.py  cad_spec.py  design.py  evaluation.py  orchestrator.py  policy.py  requirements.py  spec_sheet.py
prosthesis_rl/cad/: bridge.py
prosthesis_rl/contracts/: __init__.py  schemas.py
prosthesis_rl/cv/: backend.py  frames.py  gemma.py
prosthesis_rl/pipeline/: loop.py
prosthesis_rl/rl/: __init__.py  env.py  rewards.py  rollout.py  train.py
prosthesis_rl/sim/: __init__.py  gizmo_scene_merge.py  mujoco_env.py  verifier.py
scripts/: app_bridge.py  cad_agent_test.py  cad_spec_demo.py  compare_candidates.py  eval_dataset.py  evaluate_design.py  gen_scene.py  model_bench.py  run_loop.py  smoke.py
tests/: test_app_bridge.py  test_cad_agent.py  test_cad_spec.py  test_design_agent.py  test_evaluation_agent.py  test_orchestration.py  test_policy_agent.py  test_sim_regression.py  test_smoke_loop.py  test_spec_sheet.py
viewer/: .env.example  .gitignore  index.html  package-lock.json  package.json  server.js  vercel.json  vite.config.js
viewer/src/: App.css  (+3 more)
webdemo/: live.html  pipeline.html
(+35 files in other folders)
