[project]
name = "prosthesis-rl"
version = "0.1.0"
description = "RL-driven prosthesis design loop for ADL task personalization."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
cad = [
  "cadquery>=2.4",
]
sim = [
  "mujoco>=3.1",
]
rl = [
  "mujoco>=3.1",
  "gymnasium>=1.0",
  "stable-baselines3>=2.4",
]
cv = [
  "google-genai>=1.0",
  "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["prosthesis_rl*"]
